// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Button AnchorButtons smoke-test 1`] = `
<div class="flex items-end gap-5">
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        Internal link
      </div>
    </div>
  </a>
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </a>
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-white !border-primary-4 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
      </span>
      <div>
        Disabled link
      </div>
    </div>
  </a>
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
     target="_blank"
     rel="noreferrer noopener"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-external-link-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        External link
      </div>
    </div>
  </a>
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5"
     target="_blank"
     rel="noreferrer noopener"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-external-link-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </a>
</div>
`;

exports[`Design System/Button CustomStyles smoke-test 1`] = `
<div class="flex items-end gap-5">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6 !bg-success-3 !border-success-3 hover:!bg-success hover:!border-success">
    <div class="flex items-center gap-2">
      <div>
        Custom Class
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
          style="font-style: italic; border-radius: 2rem;"
  >
    <div class="flex items-center gap-2">
      <div>
        Custom Style
      </div>
    </div>
  </button>
</div>
`;

exports[`Design System/Button Default smoke-test 1`] = `
<button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
  <div class="flex items-center gap-2">
    <div>
      Button
    </div>
  </div>
</button>
`;

exports[`Design System/Button Disabled smoke-test 1`] = `
<button disabled
        class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
>
  <div class="flex items-center gap-2">
    <div>
      Disabled
    </div>
  </div>
</button>
`;

exports[`Design System/Button Sizes smoke-test 1`] = `
<div class="grid gap-5 items-end"
     style="grid-template-columns: repeat(4, fit-content(0px));"
>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-2">
    <div class="flex items-center gap-1">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-4 w-4 text-[1rem] leading-[1rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-2.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-6 w-6 text-[1.5rem] leading-[1.5rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
    <div class="flex items-center gap-1">
      <div>
        XSmall
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-sm py-2.5 px-6">
    <div class="flex items-center gap-2">
      <div>
        Small
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Medium
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-2xl py-4 px-6">
    <div class="flex items-center gap-2">
      <div>
        XLarge
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
    <div class="flex items-center gap-1">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-4 w-4 text-[1rem] leading-[1rem] fill-white group-hover:fill-white">
      </span>
      <div>
        XSmall
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-sm py-2.5 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Small
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Medium
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-2xl py-4 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-6 w-6 text-[1.5rem] leading-[1.5rem] fill-white group-hover:fill-white">
      </span>
      <div>
        XLarge
      </div>
    </div>
  </button>
</div>
`;

exports[`Design System/Button Variants smoke-test 1`] = `
<div class="grid gap-5 items-end bg-grey-2 p-10"
     style="grid-template-columns: repeat(5, fit-content(0px));"
>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-secondary-1 hover:!bg-secondary-2 border-secondary-1 hover:!border-secondary-2 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-grey-1 hover:!bg-grey-2 border-grey-4 hover:!border-grey-4 p-3.5">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-primary-4 !border-primary-4 p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
      </span>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-grey-1 !bg-secondary-2 !border-secondary-2 p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-grey-1">
      </span>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-white !border-primary-4 p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
      </span>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-white p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-grey-2 p-3.5"
  >
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Primary
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-secondary-1 hover:!bg-secondary-2 border-secondary-1 hover:!border-secondary-2 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Secondary
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Outlined
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        White
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-grey-1 hover:!bg-grey-2 border-grey-4 hover:!border-grey-4 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Grey
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        Primary
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-grey-1 !bg-secondary-2 !border-secondary-2 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        Secondary
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-white !border-primary-4 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        Outlined
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-white text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        White
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-grey-2 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2">
      <div>
        Grey
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Primary
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-secondary-1 hover:!bg-secondary-2 border-secondary-1 hover:!border-secondary-2 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Secondary
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
      <div>
        Outlined
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
      <div>
        White
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-grey-1 hover:!bg-grey-2 border-grey-4 hover:!border-grey-4 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
      <div>
        Grey
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
      </span>
      <div>
        Primary
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-grey-1 !bg-secondary-2 !border-secondary-2 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-grey-1">
      </span>
      <div>
        Secondary
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-3 !bg-white !border-primary-4 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
      </span>
      <div>
        Outlined
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-white text-base py-3 px-6"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
      <div>
        White
      </div>
    </div>
  </button>
  <button disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-grey-2 text-base py-3 px-6"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
      <div>
        Grey
      </div>
    </div>
  </button>
</div>
`;

exports[`Design System/Button WithCustomSVGIcon smoke-test 1`] = `
<button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
  <div class="flex items-center gap-2">
    <svg class="h-5 w-5 fill-white group-hover:fill-white"
         width="18"
         height="18"
         viewbox="0 0 24 24"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M11.602 13.7615L13.014 15.1735L21.48 6.70747L22.894 8.12147L13.014 18.0015L6.65 11.6375L8.064 10.2235L10.189 12.3485L11.602 13.7605V13.7615ZM11.604 10.9335L16.556 5.98047L17.966 7.39047L13.014 12.3435L11.604 10.9335ZM8.777 16.5885L7.364 18.0015L1 11.6375L2.414 10.2235L3.827 11.6365L3.826 11.6375L8.777 16.5885V16.5885Z">
      </path>
    </svg>
    <div>
      SVG Icon
    </div>
  </div>
</button>
`;

exports[`Design System/Button WithRef smoke-test 1`] = `
<div class="flex items-end gap-5">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Button with ref
      </div>
    </div>
  </button>
  <a href="https://territoiresentransitions.fr/"
     class="inline-block w-fit bg-none after:hidden rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
     target="_blank"
     rel="noreferrer noopener"
  >
    <div class="flex items-center gap-2 flex-row-reverse">
      <span class="ri-external-link-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Anchor with ref
      </div>
    </div>
  </a>
</div>
`;

exports[`Design System/Button WithRemixIcon smoke-test 1`] = `
<button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
  <div class="flex items-center gap-2">
    <span class="ri-leaf-line font-normal inline-flex items-center justify-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
    </span>
    <div>
      Remix Icon
    </div>
  </div>
</button>
`;
